--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -25,4 +25,4 @@ jobs:
         with:
           file: ./Dockerfile_with_maven_build
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/uniborrow-users:${{ steps.time.outputs.time }}
+          tags: lh5107/uniborrow-users:${{ steps.time.outputs.time }}
