Finish CRUD, add support for config server
Added POST, PUT and DELETE operations.

Added support for the Consul configuration server. The server
should be available at localhost:8500. There are 2 configurable
variables - 'restrict-users' and 'disable-users'. The
'disable-users' disables all service endpoints. The 'restrict-users'
disables only the POST, PUT and DELETE endpoints.

--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -1,5 +1,5 @@
 kumuluzee:
-  name: izposojevalnica-users-service
+  name: uniborrow-users-service
   env:
     name: dev
   version: 1.0.0
@@ -12,3 +12,9 @@ kumuluzee:
       connection-url: jdbc:postgresql://localhost:5432/users
       username: dbuser
       password: postgres
+  config:
+    start-retry-delay-ms: 500
+    max-retry-delay-ms: 900000
+admin-properties:
+  restrict-users: false
+  disable-users: false
