--- a/Dockerfile_with_maven_build
+++ b/Dockerfile_with_maven_build
@@ -1,7 +1,7 @@
 FROM maven:3.6.3-openjdk-11 AS build
 COPY ./ /app
 WORKDIR /app
-RUN mvn --show-version --update-snapshots --batch-mode clean package
+RUN mvn -q --show-version --update-snapshots --batch-mode clean package
 
 FROM adoptopenjdk:11-jre-hotspot
 RUN mkdir /app
