Add health checks
Added a built-in health check for database connection and a custom
demo health check. Use a microprofile compatible kumuluzee health
package.

Available at
- /health
- /health/live
- /health/ready

--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -15,6 +15,12 @@ kumuluzee:
   config:
     start-retry-delay-ms: 500
     max-retry-delay-ms: 900000
+  health:
+    checks:
+      data-source-health-check:
+        type: liveness
+        jndi-name: jdbc/UsersDB
 admin-properties:
   restrict-users: false
   disable-users: false
+  broken: false
