--- a/api/pom.xml
+++ b/api/pom.xml
@@ -55,6 +55,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.kumuluz.ee.health</groupId>
+            <artifactId>kumuluzee-health</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>si.fri.rso.uniborrow</groupId>
             <artifactId>users-lib</artifactId>
         </dependency>
