Add support for Consul service discovery
Added service discovery for Consul, using the "dev" environment and
the name "uniborrow-users-service", to be consistent with other code
base.

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -75,6 +75,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.kumuluz.ee.discovery</groupId>
+            <artifactId>kumuluzee-discovery-consul</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>si.fri.rso.uniborrow</groupId>
             <artifactId>users-services</artifactId>
         </dependency>
