--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <kumuluzee-health.version>2.4.2</kumuluzee-health.version>
         <kumuluzee-config-mp.version>1.4.1</kumuluzee-config-mp.version>
         <kumuluzee-metrics.version>2.3.0</kumuluzee-metrics.version>
+        <kumuluzee-discovery.version>1.1.1</kumuluzee-discovery.version>
 
         <postgresql.version>42.3.0</postgresql.version>
     </properties>
@@ -73,6 +74,12 @@
                 <groupId>com.kumuluz.ee.metrics</groupId>
                 <artifactId>kumuluzee-metrics-core</artifactId>
                 <version>${kumuluzee-metrics.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.kumuluz.ee.discovery</groupId>
+                <artifactId>kumuluzee-discovery-consul</artifactId>
+                <version>${kumuluzee-discovery.version}</version>
             </dependency>
 
             <dependency>
