--- a/k8s/uniborrow-users-deployment.yaml
+++ b/k8s/uniborrow-users-deployment.yaml
@@ -13,8 +13,8 @@ spec:
         app: uniborrow-users
     spec:
       containers:
-        - image: lh5107/uniborrow-users:2021-12-19-01-19-04
-          name: image-catalog
+        - image: lh5107/uniborrow-users:2021-12-20-05-46-17
+          name: uniborrow-users
           env:
             - name: KUMULUZEE_DATASOURCES0_CONNECTIONURL
               value: jdbc:postgresql://surus.db.elephantsql.com:5432/jsyabbvk
@@ -27,6 +27,10 @@ spec:
                   key: password
             - name: KUMULUZEE_CONFIG_CONSUL_AGENT
               value: http://consul-consul-server:8500
+            - name: KUMULUZEE_DISCOVERY_CONSUL_AGENT
+              value: http://consul-consul-server:8500
+            - name: KUMULUZEE_DISCOVERY_CLUSTER
+              value: uniborrow-cluster
           ports:
             - containerPort: 8080
               name: server
@@ -37,12 +41,14 @@ spec:
               port: server
             initialDelaySeconds: 30
             periodSeconds: 10
+            timeoutSeconds: 2
           readinessProbe:
             httpGet:
               path: /health/ready
               port: server
             initialDelaySeconds: 30
             periodSeconds: 10
+            timeoutSeconds: 2
 ---
 
 apiVersion: v1
