--- a/api/pom.xml
+++ b/api/pom.xml
@@ -51,7 +51,7 @@
 
         <dependency>
             <groupId>com.kumuluz.ee.config</groupId>
-            <artifactId>kumuluzee-config-consul</artifactId>
+            <artifactId>kumuluzee-config-etcd</artifactId>
         </dependency>
 
         <dependency>
@@ -76,7 +76,7 @@
 
         <dependency>
             <groupId>com.kumuluz.ee.discovery</groupId>
-            <artifactId>kumuluzee-discovery-consul</artifactId>
+            <artifactId>kumuluzee-discovery-etcd</artifactId>
         </dependency>
 
         <dependency>
