--- a/pom.xml
+++ b/pom.xml
@@ -53,15 +53,15 @@
             </dependency>
 
             <dependency>
-                <groupId>com.kumuluz.ee.config</groupId>
-                <artifactId>kumuluzee-config-consul</artifactId>
-                <version>${kumuluzee-config.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>com.kumuluz.ee.health</groupId>
                 <artifactId>kumuluzee-health</artifactId>
                 <version>${kumuluzee-health.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.kumuluz.ee.config</groupId>
+                <artifactId>kumuluzee-config-etcd</artifactId>
+                <version>${kumuluzee-config.version}</version>
             </dependency>
 
             <dependency>
@@ -78,7 +78,7 @@
 
             <dependency>
                 <groupId>com.kumuluz.ee.discovery</groupId>
-                <artifactId>kumuluzee-discovery-consul</artifactId>
+                <artifactId>kumuluzee-discovery-etcd</artifactId>
                 <version>${kumuluzee-discovery.version}</version>
             </dependency>
 
