--- a/k8s/uniborrow-users-deployment.yaml
+++ b/k8s/uniborrow-users-deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: uniborrow-users
     spec:
       containers:
-        - image: lh5107/uniborrow-users:2021-12-23-01-56-31
+        - image: lh5107/uniborrow-users:2021-12-31-03-29-19
           name: uniborrow-users
           env:
             - name: KUMULUZEE_DATASOURCES0_CONNECTIONURL
@@ -25,12 +25,14 @@ spec:
                 secretKeyRef:
                   name: uniborrow-users-db-pass
                   key: password
-            - name: KUMULUZEE_CONFIG_CONSUL_AGENT
-              value: http://consul-server:8500
-            - name: KUMULUZEE_DISCOVERY_CONSUL_AGENT
-              value: http://consul-server:8500
+            - name: KUMULUZEE_CONFIG_ETCD_HOSTS
+              value: http://etcd:2379
+            - name: KUMULUZEE_DISCOVERY_ETCD_HOSTS
+              value: http://etcd:2379
             - name: KUMULUZEE_DISCOVERY_CLUSTER
               value: uniborrow-cluster
+            - name: KUMULUZEE_SERVER_BASEURL
+              value: http://uniborrow-users:8080
           ports:
             - containerPort: 8080
               name: server
