--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -39,6 +39,26 @@ kumuluzee:
       - name: users-endpoint
         url-pattern: /v1/users*
         status-codes: "200, 500"
+  logs:
+    config-file: '<?xml version="1.0" encoding="UTF-8"?>
+                            <Configuration name="comments">
+                                <Appenders>
+                                    <Console name="console" target="SYSTEM_OUT">
+                                        <PatternLayout pattern="%d %p %marker %m %X %ex %n"/>
+                                    </Console>
+                                    <Socket name="logstash" host="8ff6c166-5030-437c-b97b-37178a04750d-ls.logit.io"
+                                    port="24755" protocol="udp">
+                                        <JSONLayout complete="false" compact="true" eventEol="true" charset="UTF-8" properties="true"/>
+                                    </Socket>
+                                </Appenders>
+                                <Loggers>
+                                    <!-- Default logger -->
+                                    <Root level="all">
+                                        <AppenderRef ref="console" level="info" />
+                                        <AppenderRef ref="logstash" level="trace" />
+                                    </Root>
+                                </Loggers>
+                            </Configuration>'
 admin-properties:
   restrict-users: false
   disable-users: false
