Add OpenAPI definitions
Added OpenAPI definitions to all the endpoints.

Enabled UI for OpenAPI.

Added library scanning to config so the classes for schema generation
are available.

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -80,6 +80,16 @@
         </dependency>
 
         <dependency>
+            <groupId>com.kumuluz.ee.openapi</groupId>
+            <artifactId>kumuluzee-openapi-mp</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.kumuluz.ee.openapi</groupId>
+            <artifactId>kumuluzee-openapi-mp-ui</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>si.fri.rso.uniborrow</groupId>
             <artifactId>users-lib</artifactId>
         </dependency>
