--- a/k8s/uniborrow-users-deployment.yaml
+++ b/k8s/uniborrow-users-deployment.yaml
@@ -33,6 +33,8 @@ spec:
               value: uniborrow-cluster
             - name: KUMULUZEE_SERVER_BASEURL
               value: http://uniborrow-users:8080
+            - name: KUMULUZEE_HEALTH_CHECKS_ETCDHEALTHCHECK_CONNETCIONURL
+              value: http://etcd:2379/health
           ports:
             - containerPort: 8080
               name: server
