Change logit config, fix OpenAPI endpoints.

--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -44,10 +44,11 @@ kumuluzee:
   openapi-mp:
     enabled: true
     servlet:
-      mapping: /openapi
+      mapping: /uniborrow-users/openapi
     ui:
       enabled: true
-      mapping: /openapi/ui
+      mapping: /uniborrow-users/openapi/ui
+      specification-server: http://localhost:8080
   dev:
     scan-libraries:
       - users-lib
@@ -58,8 +59,8 @@ kumuluzee:
                                     <Console name="console" target="SYSTEM_OUT">
                                         <PatternLayout pattern="%d %p %marker %m %X %ex %n"/>
                                     </Console>
-                                    <Socket name="logstash" host="8ff6c166-5030-437c-b97b-37178a04750d-ls.logit.io"
-                                    port="24755" protocol="udp">
+                                    <Socket name="logstash" host="252bc561-0bda-442f-97f3-ba3d8b1a720d-ls.logit.io"
+                                    port="18623" protocol="udp">
                                         <JSONLayout complete="false" compact="true" eventEol="true" charset="UTF-8" properties="true"/>
                                     </Socket>
                                 </Appenders>
