--- a/k8s/uniborrow-users-deployment.yaml
+++ b/k8s/uniborrow-users-deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: uniborrow-users
     spec:
       containers:
-        - image: lh5107/uniborrow-users:2022-01-03-03-30-25
+        - image: lh5107/uniborrow-users:2022-01-10-06-06-56
           name: uniborrow-users
           env:
             - name: KUMULUZEE_DATASOURCES0_CONNECTIONURL
@@ -33,8 +33,10 @@ spec:
               value: uniborrow-cluster
             - name: KUMULUZEE_SERVER_BASEURL
               value: http://uniborrow-users:8080
-            - name: KUMULUZEE_HEALTH_CHECKS_ETCDHEALTHCHECK_CONNETCIONURL
+            - name: KUMULUZEE_HEALTH_CHECKS_ETCDHEALTHCHECK_CONNECTIONURL
               value: http://etcd:2379/health
+            - name: KUMULUZEE_OPENAPIMP_UI_SPECIFICATIONSERVER
+              value: http://35.223.79.242
           ports:
             - containerPort: 8080
               name: server
